Align GUI on a couple of places and clear warnings